--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Rent camping equipments. Hassel-free!">
+    <meta name="description" content="Rent camping & trekking equipment. Hassel-free!">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
