co-founder description improvements

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
       rel="stylesheet"
       async
     />
-    <title>Onevas</title>
+    <title>Onevas: Rent camping & trekking equipment</title>
   </head>
   <body class="sidebar-collapse">
     <noscript>You need to enable JavaScript to run this app.</noscript>
